# e-zkappchain

./: .gitignore  Cargo.toml  LICENSE  README.md  genesis.json
contracts/cache/: solidity-files-cache.json
contracts/src/: EviceRollup.sol  EviceVerifier.sol  IPlonky3Verifier.sol
contracts/test/: EviceRollup.t.sol
crates/sequencer-node/: Cargo.toml
crates/sequencer-node/src/: consensus.rs  crypto.rs  genesis.rs  keystore.rs  lib.rs  main.rs  p2p.rs  settlement.rs
evice-multi-sequencer/: Cargo.toml  README.md
evice-multi-sequencer/src/: crypto.rs  error.rs  genesis.rs  keystore.rs  lib.rs
evice-multi-sequencer/src/consensus/: engine.rs  mod.rs  state.rs  types.rs
evice-multi-sequencer/src/p2p/: mod.rs  swarm.rs  types.rs
sequencer-core/: Cargo.toml
sequencer-core/src/: consensus.rs  crypto.rs  keystore.rs  lib.rs  p2p.rs
zkapp/common/: Cargo.toml
zkapp/common/src/: lib.rs  transaction.rs
zkapp/engine/: Cargo.toml
zkapp/engine/src/: lib.rs  processor.rs  wal.rs
zkapp/ffi/: Cargo.toml  build.rs  cbindgen.toml  evice_ffi.h
zkapp/ffi/src/: error.rs  lib.rs
zkapp/node/: Cargo.toml  build.rs
zkapp/node/src/: main.rs  settlement.rs
zkapp/proto/: service.proto
zkapp/simulator/src/: alloy_db.rs  lib.rs
zkapp/user-client/: build.rs
zkapp/user-client/src/: main.rs
zkapp/zk-core/: Cargo.toml
zkapp/zk-core/src/: borsh_helpers.rs  lib.rs
zkapp/zk-prover/: Cargo.toml
zkapp/zk-prover/src/: lib.rs
