[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/engine",
    "crates/ffi",
    "crates/sequencer-node",
    "crates/simulator",
    "crates/solver-service",
    "crates/user-client",
    "crates/zk-core",
    "crates/zk-prover",
]

[workspace.dependencies]
# Internal Crates
common = { path = "crates/common" }
engine = { path = "crates/engine" }
simulator = { path = "crates/simulator" }
sequencer = { path = "crates/sequencer-node" }
zk-prover = { path = "crates/zk-prover" }
zk-core = { path = "crates/zk-core" }

# Concurrency & Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.13"
rand = "0.9.2"       
dotenv = "0.15"
chrono = "0.4.42"

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["macros"] }
serde_bytes = "0.11"
serde_json = "1.0"
slab = "0.4"
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
borsh = { version = "1.5.7", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
url = "2.5"
thiserror = "2.0.16"
derive_more = { version = "2.1.1", features = ["full"] } 
futures = "0.3"
futures-util = "0.3"

# Networking (gRPC & HTTP)
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Blockchain Core (Alloy & Revm)
alloy = { version = "1.3.0", features = ["full", "node-bindings", "rpc-types-eth", "providers", "network", "signers", "signer-local", "transports", "transport-ws"] }
alloy-primitives = "1.5.2"
revm = { version = "33.1.0", features = ["std", "secp256k1", "optional_balance_check"] }
revm-primitives = { version = "21.0.2", features = ["std"] }

# Logging & Observability
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# RPC (gRPC)
prost = "0.14.1"
tonic = { version = "0.14.1", features = ["transport", "codegen", "tls-ring"] }
tonic-build = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"

uuid = { version = "1.8", features = ["v4"] }
zstd = "0.13"
tempfile = "3.10"
flate2 = "1.0"
spin = "0.10.0"
lru = "0.16.0"
num_cpus = "1.17.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"

# Asinkronus & Jaringan
async-recursion = "1.1.1"
async-trait = "0.1"

# Kriptografi & Keamanan
sha2 = "0.10.8"
sha3 = "0.10.8"
rpassword = "7.3.1"
merlin = "3.0.0"
schnorrkel = { version = "0.11", features = ["getrandom"] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
scrypt = "0.11.0"
blake2 = "0.10.6"
generic-array = "1.3.4"
elliptic-curve = { version = "0.13.8", features = ["sec1", "arithmetic"] }
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
cipher = { version = "0.4.4", features = ["alloc"] }
aead = "0.5.2"
aes = "0.8.4"
hmac = "0.12.1"
cbc = "0.1.2"
ecdsa = { version = "0.16.9" }
signature = { version = "2.2.0" }
zeroize = "1.8.1"
blst = { version = "0.3.15", default-features = false, features = ["serde"] }
rand_core = "0.6.4"

# ZK-SNARKs (arkworks)
ark-bls12-381 = { version = "0.5", features = ["curve"] }
ark-bls12-377 = { version = "0.5", features = ["curve"] }
ark-ff = { version = "0.5", features = ["std"] }
ark-r1cs-std = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["parallel"] }
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs", "merkle_tree"] }

# Jaringan P2P (libp2p)
libp2p = { version = "0.56.0", features = ["full", "rsa"] }
libp2p-request-response = { version = "0.29.0", features = ["cbor"] }