[package]
name = "sequencer-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
engine = { workspace = true }
zk-prover = { workspace = true }
zk-core = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
async-recursion = { workspace = true }

clap = { workspace = true }
libp2p = { workspace = true }
libp2p-request-response = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
chacha20poly1305 = { workspace = true }
schnorrkel = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
lru = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
serde_with = { workspace = true }
rpassword = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
cipher = { workspace = true }
scrypt = { workspace = true }
blst = { workspace = true }


[build-dependencies]
tonic-prost-build = { workspace = true }