[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
serde_with = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
sequencer-core = { workspace = true }