[package]
name = "zkapp-node"
version = "0.1.0"
edition = "2021"

[dependencies]
evice-multi-sequencer = { workspace = true }
engine = { workspace = true }
common = { workspace = true }
zk-prover = { workspace = true }
zk-core = { workspace = true }

axum = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
borsh = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
schnorrkel = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
