[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
hashbrown = "0.14"
serde = { version = "1.0", features = ["derive"] }

p3-air = { git = "https://github.com/0xPolygonZero/plonky3.git" }
p3-field = { git = "https://github.com/0xPolygonZero/plonky3.git" }
p3-matrix = { git = "https://github.com/0xPolygonZero/plonky3.git" }
p3-uni-stark = { git = "https://github.com/0xPolygonZero/plonky3.git" }
p3-baby-bear = { git = "https://github.com/0xPolygonZero/plonky3.git" }
